<resources>
    <string name="app_name">CozyStitchApp</string>
    <string name="profile_label">Profile</string>
    <string name="new_project_label">New Project</string>
    <string name="Back_label">Back</string>
    <string name="sign_upLabel">Sign Up</string>
    <string name="login_label">I already have an account</string>
    <string name="separation_line">---------------------------------------------------------</string>
    <string name="guest_label">Explore as a GUEST!</string>
    <string name="logo_image">Logo Image</string>
    <string name="autorization_privacy_label">I want to receive e-mail from Cozy Stitch with offers and updates of the app.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_in_label">Sign In</string>
    <string name="repete_password_label">Repete Password</string>
    <string name="welcome_label">Welcome!</string>
    <string name="intro_text">Just a few details about you and you will be ready to explore!</string>
    <string name="level_question">In what level of crochet are you?</string>
    <string name="email_label">Email</string>
    <string name="home_icon_label">Home</string>
    <string name="patterns_icon_label">Patterns</string>
    <string name="patterns_catalog_label">Patterns Catalog</string>
    <string name="projects_label">Projects</string>
    <string name="user_image_description">User Image</string>
    <string name="close_button_label">close</string>
    <string name="project_name_question">How do you want to call your new project?</string>
    <string name="project_name_hint">Project Name</string>
    <string name="project_type_hint">Project Type</string>
    <string name="materials_question">Insert the materials that you will use:</string>
    <string name="yarn_hint">Yarn</string>
    <string name="hook_hint">Hook</string>
    <string name="acessories_hint">Acessories</string>
    <string name="pattern_question">Time to choose your Pattern!</string>
    <string name="save_label">SAVE</string>
    <string name="pattern_catalog_button_label">Choose From our Cataloghe</string>
    <string name="upload_a_pdf_label">Upload a PDF</string>
    <string name="user_name_placeholder">User Name</string>
    <string name="user_email_placeholder">useremail@email.com</string>
    <string name="personal_details">Personal Details</string>
    <string name="logout">Logout</string>
    <string name="status_label">Status:</string>
    <string name="project_image_description">Project Image</string>
    <string name="yarn_label">YARN:</string>
    <string name="hook_label">HOOK:</string>
    <string name="altri_label">ALTRI:</string>

    <string-array name="project_type">
        <item>Project Type</item>
        <item>Amigurumi</item>
        <item>Bags and Totes</item>
        <item>Baby Items</item>
        <item>Clothing</item>
        <item>Coasters and Placemats</item>
        <item>Dolls</item>
        <item>Granny Squares</item>
        <item>Hats</item>
        <item>Headbands and Hair Accessories</item>
        <item>Jewelry</item>
        <item>Mittens and Gloves</item>
        <item>Pillows</item>
        <item>Rugs and Doilies</item>
        <item>Socks and Slippers</item>
        <item>Tablecloths and Table Runners</item>
        <item>Tunisian Crochet</item>
        <item>Pet Accessories</item>
        <item>Blankets and Afghans</item>
    </string-array>
</resources>