<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.profile.ProfilePageFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/user_image_description"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:strokeColor="@color/mainButton"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/user_name_placeholder"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/icons_cardLabels"
        app:layout_constraintBottom_toTopOf="@+id/buttonsList"
        app:layout_constraintStart_toEndOf="@+id/userImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email_placeholder"
        android:textColor="@color/icons_cardLabels"
        app:layout_constraintEnd_toEndOf="@+id/userNameTextView"
        app:layout_constraintStart_toStartOf="@+id/userNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

    <LinearLayout
        android:id="@+id/buttonsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImageView">


        <Button
            android:id="@+id/personalDetailsButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/mainButton"
            android:text="@string/personal_details"
            android:textAlignment="textStart"
            android:textColor="@color/pageTitle" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/mainButton"
            android:text="@string/logout"
            android:textAlignment="textStart"
            android:textColor="@color/pageTitle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>