<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:divider="@drawable/divider"
        android:showDividers="middle"
        android:background="@color/cards_and_bars"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="5dp"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/projectImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/mainButton"
            android:contentDescription="@string/project_image_description"
            android:layout_marginEnd="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/divider"
            android:showDividers="middle">

            <TextView
                android:id="@+id/projectNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/project_name_hint"
                android:textColor="@color/icons_cardLabels"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/projectTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/project_type_hint"
                android:textColor="@color/icons_cardLabels"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/projectStatusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/status_label"
                    android:textColor="@color/icons_cardLabels"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/statusPercentageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/projects_label"
                    android:textColor="@color/icons_cardLabels"
                    android:textSize="14sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>