<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signup.registration.SignUpFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <com.google.android.material.appbar.MaterialToolbar
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:title="@string/sign_upLabel"
           app:titleCentered="true"
           app:titleTextColor="@color/neutral" />
       <EditText
           android:id="@+id/emailEditText"
           android:layout_width="match_parent"
           android:layout_height="48dp"
           android:layout_marginStart="30dp"
           android:layout_marginTop="150dp"
           android:layout_marginEnd="30dp"
           android:hint="@string/email_label"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <EditText
           android:id="@+id/passwordEditText"
           android:layout_width="match_parent"
           android:layout_height="48dp"
           android:hint="Password"
           android:layout_marginStart="30dp"
           android:layout_marginTop="50dp"
           android:layout_marginEnd="30dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

       <EditText
           android:id="@+id/checkPasswordEditText"
           android:layout_width="match_parent"
           android:layout_height="48dp"
           android:hint="@string/repete_password_label"
           android:layout_marginStart="30dp"
           android:layout_marginTop="50dp"
           android:layout_marginEnd="30dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

       <LinearLayout
           android:id="@+id/authorizationContainer"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/checkPasswordEditText">

           <CheckBox
               android:id="@+id/checkBox"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="20dp"
               android:layout_marginTop="10dp" />

           <TextView
               android:layout_width="318dp"
               android:layout_height="wrap_content"
               android:lines="2"
               android:textColor="@color/neutral"
               android:text="@string/autorization_privacy_label" />
       </LinearLayout>

       <android.widget.Button
           android:id="@+id/singUpButton"
           android:layout_width="match_parent"
           android:layout_height="68dp"
           android:layout_marginStart="30dp"
           android:layout_marginTop="50dp"
           android:layout_marginEnd="30dp"
           android:background="@drawable/sign_up_button_shape"
           android:text="@string/sign_upLabel"
           android:textColor="@color/labelSignUp"
           android:textSize="14sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/authorizationContainer" />

       <TextView
           android:id="@+id/separationLine"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="70dp"
           android:text="@string/separation_line"
           android:textSize="20sp"
           android:textColor="@color/neutral"
           app:layout_constraintBottom_toTopOf="@+id/exploreAsAGuestLink"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/singUpButton" />

       <TextView
           android:id="@+id/exploreAsAGuestLink"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           android:text="@string/guest_label"
           android:textColor="@color/neutral"
           android:textSize="14sp"
           android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/separationLine" />

   </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>