<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StartActivity"
    android:background="@color/background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/border_radius">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/logo_image"
            android:src="@drawable/logo_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:background="@color/background">

        <android.widget.Button
            android:id="@+id/singUpButton"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/sign_up_button_shape"
            android:text="@string/sign_upLabel"
            android:textColor="@color/labelSignUp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/singInButton"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/login_button_shape"
            android:text="@string/login_label"
            android:textColor="@color/labelSignUp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singUpButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>